fix: nav button z-index

--- a/styles/layouts/_main-navigation.scss
+++ b/styles/layouts/_main-navigation.scss
@@ -145,7 +145,7 @@
 			background: $k-accent;
 			border: 1px solid black !important;
 			border-radius: 0;
-			z-index: 1;
+			z-index: 3;
 		}
 	}
 
